crates/functions/src/tests/table/snapshots/flatten/query_flatten_empty.snap
---
source: crates/functions/src/tests/table/flatten.rs
description: "\"SELECT * FROM FLATTEN(INPUT => PARSE_JSON('[]')) f;\""
---
Ok(
    [
        "+-----+-----+------+-------+-------+------+",
        "| SEQ | KEY | PATH | INDEX | VALUE | THIS |",
        "+-----+-----+------+-------+-------+------+",
        "+-----+-----+------+-------+-------+------+",
    ],
)
