crates/functions/src/tests/table/snapshots/flatten/query_flatten_join.snap
---
source: crates/functions/src/tests/table/flatten.rs
description: "\"SELECT column1, f.* FROM json_tbl, LATERAL FLATTEN(INPUT => column1, PATH => 'name') f\""
info: "Setup queries: CREATE TABLE json_tbl AS  SELECT * FROM values\n          ('{\"name\":  {\"first\": \"John\", \"last\": \"Smith\"}}'),\n          ('{\"name\":  {\"first\": \"Jane\", \"last\": \"Doe\"}}') v;"
---
Ok(
    [
        "+-----------------------------------------------+-----+-------+------------+-------+---------+--------------------+",
        "| column1                                       | seq | key   | path       | index | value   | this               |",
        "+-----------------------------------------------+-----+-------+------------+-------+---------+--------------------+",
        "| {\"name\":  {\"first\": \"John\", \"last\": \"Smith\"}} | 1   | first | name.first |       | \"John\"  | {                  |",
        "|                                               |     |       |            |       |         |   \"first\": \"John\", |",
        "|                                               |     |       |            |       |         |   \"last\": \"Smith\"  |",
        "|                                               |     |       |            |       |         | }                  |",
        "| {\"name\":  {\"first\": \"John\", \"last\": \"Smith\"}} | 1   | last  | name.last  |       | \"Smith\" | {                  |",
        "|                                               |     |       |            |       |         |   \"first\": \"John\", |",
        "|                                               |     |       |            |       |         |   \"last\": \"Smith\"  |",
        "|                                               |     |       |            |       |         | }                  |",
        "| {\"name\":  {\"first\": \"John\", \"last\": \"Smith\"}} | 1   | first | name.first |       | \"Jane\"  | {                  |",
        "|                                               |     |       |            |       |         |   \"first\": \"Jane\", |",
        "|                                               |     |       |            |       |         |   \"last\": \"Doe\"    |",
        "|                                               |     |       |            |       |         | }                  |",
        "| {\"name\":  {\"first\": \"John\", \"last\": \"Smith\"}} | 1   | last  | name.last  |       | \"Doe\"   | {                  |",
        "|                                               |     |       |            |       |         |   \"first\": \"Jane\", |",
        "|                                               |     |       |            |       |         |   \"last\": \"Doe\"    |",
        "|                                               |     |       |            |       |         | }                  |",
        "| {\"name\":  {\"first\": \"Jane\", \"last\": \"Doe\"}}   | 1   | first | name.first |       | \"John\"  | {                  |",
        "|                                               |     |       |            |       |         |   \"first\": \"John\", |",
        "|                                               |     |       |            |       |         |   \"last\": \"Smith\"  |",
        "|                                               |     |       |            |       |         | }                  |",
        "| {\"name\":  {\"first\": \"Jane\", \"last\": \"Doe\"}}   | 1   | last  | name.last  |       | \"Smith\" | {                  |",
        "|                                               |     |       |            |       |         |   \"first\": \"John\", |",
        "|                                               |     |       |            |       |         |   \"last\": \"Smith\"  |",
        "|                                               |     |       |            |       |         | }                  |",
        "| {\"name\":  {\"first\": \"Jane\", \"last\": \"Doe\"}}   | 1   | first | name.first |       | \"Jane\"  | {                  |",
        "|                                               |     |       |            |       |         |   \"first\": \"Jane\", |",
        "|                                               |     |       |            |       |         |   \"last\": \"Doe\"    |",
        "|                                               |     |       |            |       |         | }                  |",
        "| {\"name\":  {\"first\": \"Jane\", \"last\": \"Doe\"}}   | 1   | last  | name.last  |       | \"Doe\"   | {                  |",
        "|                                               |     |       |            |       |         |   \"first\": \"Jane\", |",
        "|                                               |     |       |            |       |         |   \"last\": \"Doe\"    |",
        "|                                               |     |       |            |       |         | }                  |",
        "+-----------------------------------------------+-----+-------+------------+-------+---------+--------------------+",
    ],
)
