crates/functions/src/tests/table/snapshots/flatten/query_flatten_limit.snap
---
source: crates/functions/src/tests/table/flatten.rs
description: "r#\"SELECT * from flatten('{\"a\":1, \"b\":[77,88], \"c\": {\"d\":\"X\"}}','',false,true,'both') limit 1;\"#"
---
Ok(
    [
        "+-----+-----+------+-------+-------+--------------+",
        "| SEQ | KEY | PATH | INDEX | VALUE | THIS         |",
        "+-----+-----+------+-------+-------+--------------+",
        "| 1   | a   | a    |       | 1     | {            |",
        "|     |     |      |       |       |   \"a\": 1,    |",
        "|     |     |      |       |       |   \"b\": [     |",
        "|     |     |      |       |       |     77,      |",
        "|     |     |      |       |       |     88       |",
        "|     |     |      |       |       |   ],         |",
        "|     |     |      |       |       |   \"c\": {     |",
        "|     |     |      |       |       |     \"d\": \"X\" |",
        "|     |     |      |       |       |   }          |",
        "|     |     |      |       |       | }            |",
        "+-----+-----+------+-------+-------+--------------+",
    ],
)
