crates/functions/src/tests/table/snapshots/flatten/query_flatten_non_namedargs.snap
---
source: crates/functions/src/tests/table/flatten.rs
description: "\"SELECT * FROM FLATTEN('[1,77]') f;\""
---
Ok(
    [
        "+-----+-----+------+-------+-------+------+",
        "| SEQ | KEY | PATH | INDEX | VALUE | THIS |",
        "+-----+-----+------+-------+-------+------+",
        "| 1   |     | [0]  | 0     | 1     | [    |",
        "|     |     |      |       |       |   1, |",
        "|     |     |      |       |       |   77 |",
        "|     |     |      |       |       | ]    |",
        "| 1   |     | [1]  | 1     | 77    | [    |",
        "|     |     |      |       |       |   1, |",
        "|     |     |      |       |       |   77 |",
        "|     |     |      |       |       | ]    |",
        "+-----+-----+------+-------+-------+------+",
    ],
)
