crates/functions/src/tests/table/snapshots/flatten/query_flatten_projection.snap
---
source: crates/functions/src/tests/table/flatten.rs
description: "r#\"SELECT d.value from flatten('{\"a\":1, \"b\":[77,88], \"c\": {\"d\":\"X\"}}','',false,true,'both') d;\"#"
---
Ok(
    [
        "+------------+",
        "| VALUE      |",
        "+------------+",
        "| 1          |",
        "| [          |",
        "|   77,      |",
        "|   88       |",
        "| ]          |",
        "| 77         |",
        "| 88         |",
        "| {          |",
        "|   \"d\": \"X\" |",
        "| }          |",
        "| \"X\"        |",
        "+------------+",
    ],
)
