crates/functions/src/tests/table/snapshots/flatten/query_flatten_recursive.snap
---
source: crates/functions/src/tests/table/flatten.rs
assertion_line: 54
description: "r#\"SELECT * FROM  FLATTEN(INPUT => PARSE_JSON('{\"a\":1, \"b\":[77,88], \"c\": {\"d\":\"X\"}}'), RECURSIVE => TRUE ) f;\"#"
---
Ok(
    [
        "+-----+-----+------+-------+------------+--------------+",
        "| SEQ | KEY | PATH | INDEX | VALUE      | THIS         |",
        "+-----+-----+------+-------+------------+--------------+",
        "| 1   | a   | a    |       | 1          | {            |",
        "|     |     |      |       |            |   \"a\": 1,    |",
        "|     |     |      |       |            |   \"b\": [     |",
        "|     |     |      |       |            |     77,      |",
        "|     |     |      |       |            |     88       |",
        "|     |     |      |       |            |   ],         |",
        "|     |     |      |       |            |   \"c\": {     |",
        "|     |     |      |       |            |     \"d\": \"X\" |",
        "|     |     |      |       |            |   }          |",
        "|     |     |      |       |            | }            |",
        "| 1   | b   | b    |       | [          | {            |",
        "|     |     |      |       |   77,      |   \"a\": 1,    |",
        "|     |     |      |       |   88       |   \"b\": [     |",
        "|     |     |      |       | ]          |     77,      |",
        "|     |     |      |       |            |     88       |",
        "|     |     |      |       |            |   ],         |",
        "|     |     |      |       |            |   \"c\": {     |",
        "|     |     |      |       |            |     \"d\": \"X\" |",
        "|     |     |      |       |            |   }          |",
        "|     |     |      |       |            | }            |",
        "| 1   |     | b[0] | 0     | 77         | [            |",
        "|     |     |      |       |            |   77,        |",
        "|     |     |      |       |            |   88         |",
        "|     |     |      |       |            | ]            |",
        "| 1   |     | b[1] | 1     | 88         | [            |",
        "|     |     |      |       |            |   77,        |",
        "|     |     |      |       |            |   88         |",
        "|     |     |      |       |            | ]            |",
        "| 1   | c   | c    |       | {          | {            |",
        "|     |     |      |       |   \"d\": \"X\" |   \"a\": 1,    |",
        "|     |     |      |       | }          |   \"b\": [     |",
        "|     |     |      |       |            |     77,      |",
        "|     |     |      |       |            |     88       |",
        "|     |     |      |       |            |   ],         |",
        "|     |     |      |       |            |   \"c\": {     |",
        "|     |     |      |       |            |     \"d\": \"X\" |",
        "|     |     |      |       |            |   }          |",
        "|     |     |      |       |            | }            |",
        "| 1   | d   | c.d  |       | \"X\"        | {            |",
        "|     |     |      |       |            |   \"d\": \"X\"   |",
        "|     |     |      |       |            | }            |",
        "+-----+-----+------+-------+------------+--------------+",
    ],
)
